// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GOLDEN buildHeaders (default executor providers) > 1min → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > 1min-api → headers (apiKey / oauth) 1`] = `
{
  "apiKey": "THROW: Cannot read properties of undefined (reading 'header')",
  "nonStream": "THROW: Cannot read properties of undefined (reading 'header')",
  "oauth": "THROW: Cannot read properties of undefined (reading 'header')",
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > adapta-web → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > agentrouter → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > agnes-api → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > agnes-web → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > aihorde → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > alibaba → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > alibaba-cn → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > alicode → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > alicode-intl → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > anthropic → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Anthropic-Beta": "claude-code-20250219,interleaved-thinking-2025-05-14",
    "Anthropic-Version": "2023-06-01",
    "Content-Type": "application/json",
    "anthropic-version": "2023-06-01",
    "x-api-key": "<CRED>",
  },
  "nonStream": {
    "Anthropic-Beta": "claude-code-20250219,interleaved-thinking-2025-05-14",
    "Anthropic-Version": "2023-06-01",
    "Content-Type": "application/json",
    "anthropic-version": "2023-06-01",
    "x-api-key": "<CRED>",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Anthropic-Beta": "claude-code-20250219,interleaved-thinking-2025-05-14",
    "Anthropic-Version": "2023-06-01",
    "Content-Type": "application/json",
    "anthropic-version": "2023-06-01",
    "x-api-key": "<CRED>",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > api-airforce → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > assemblyai → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > bazaarlink → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > blackbox → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > blackbox-web → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > bynara → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > byteplus → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > cerebras → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > chatglm-cn → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > chatgpt-web → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > chutes → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > claude → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Anthropic-Beta": "claude-code-20250219,oauth-2025-04-20,interleaved-thinking-2025-05-14,context-management-2025-06-27,prompt-caching-scope-2026-01-05,advanced-tool-use-2025-11-20,effort-2025-11-24,structured-outputs-2025-12-15,fast-mode-2026-02-01,redact-thinking-2026-02-12,token-efficient-tools-2026-03-28",
    "Anthropic-Dangerous-Direct-Browser-Access": "true",
    "Anthropic-Version": "2023-06-01",
    "Content-Type": "application/json",
    "User-Agent": "claude-cli/2.1.92 (external, sdk-cli)",
    "X-App": "cli",
    "X-Stainless-Arch": "arm64",
    "X-Stainless-Helper-Method": "stream",
    "X-Stainless-Lang": "js",
    "X-Stainless-Os": "MacOS",
    "X-Stainless-Package-Version": "0.80.0",
    "X-Stainless-Retry-Count": "0",
    "X-Stainless-Runtime": "node",
    "X-Stainless-Runtime-Version": "v24.14.0",
    "X-Stainless-Timeout": "600",
    "x-api-key": "<CRED>",
  },
  "nonStream": {
    "Anthropic-Beta": "claude-code-20250219,oauth-2025-04-20,interleaved-thinking-2025-05-14,context-management-2025-06-27,prompt-caching-scope-2026-01-05,advanced-tool-use-2025-11-20,effort-2025-11-24,structured-outputs-2025-12-15,fast-mode-2026-02-01,redact-thinking-2026-02-12,token-efficient-tools-2026-03-28",
    "Anthropic-Dangerous-Direct-Browser-Access": "true",
    "Anthropic-Version": "2023-06-01",
    "Content-Type": "application/json",
    "User-Agent": "claude-cli/2.1.92 (external, sdk-cli)",
    "X-App": "cli",
    "X-Stainless-Arch": "arm64",
    "X-Stainless-Helper-Method": "stream",
    "X-Stainless-Lang": "js",
    "X-Stainless-Os": "MacOS",
    "X-Stainless-Package-Version": "0.80.0",
    "X-Stainless-Retry-Count": "0",
    "X-Stainless-Runtime": "node",
    "X-Stainless-Runtime-Version": "v24.14.0",
    "X-Stainless-Timeout": "600",
    "x-api-key": "<CRED>",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Anthropic-Beta": "claude-code-20250219,oauth-2025-04-20,interleaved-thinking-2025-05-14,context-management-2025-06-27,prompt-caching-scope-2026-01-05,advanced-tool-use-2025-11-20,effort-2025-11-24,structured-outputs-2025-12-15,fast-mode-2026-02-01,redact-thinking-2026-02-12,token-efficient-tools-2026-03-28",
    "Anthropic-Dangerous-Direct-Browser-Access": "true",
    "Anthropic-Version": "2023-06-01",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "User-Agent": "claude-cli/2.1.92 (external, sdk-cli)",
    "X-App": "cli",
    "X-Stainless-Arch": "arm64",
    "X-Stainless-Helper-Method": "stream",
    "X-Stainless-Lang": "js",
    "X-Stainless-Os": "MacOS",
    "X-Stainless-Package-Version": "0.80.0",
    "X-Stainless-Retry-Count": "0",
    "X-Stainless-Runtime": "node",
    "X-Stainless-Runtime-Version": "v24.14.0",
    "X-Stainless-Timeout": "600",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > claude-web → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > cline → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "HTTP-Referer": "https://cline.bot",
    "X-Title": "Cline",
    "x-client-type": "cline-cli",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "HTTP-Referer": "https://cline.bot",
    "X-Title": "Cline",
    "x-client-type": "cline-cli",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "HTTP-Referer": "https://cline.bot",
    "X-Title": "Cline",
    "x-client-type": "cline-cli",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > clinepass → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "HTTP-Referer": "https://cline.bot",
    "X-Title": "Cline",
    "x-client-type": "cline-cli",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "HTTP-Referer": "https://cline.bot",
    "X-Title": "Cline",
    "x-client-type": "cline-cli",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "HTTP-Referer": "https://cline.bot",
    "X-Title": "Cline",
    "x-client-type": "cline-cli",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > cloudflare-ai → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > codebuddy-cn → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "User-Agent": "CLI/2.108.1 CodeBuddy/2.108.1",
    "X-IDE-Name": "CLI",
    "X-IDE-Type": "CLI",
    "X-Product": "SaaS",
    "x-codebuddy-request": "1",
    "x-requested-with": "XMLHttpRequest",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "User-Agent": "CLI/2.108.1 CodeBuddy/2.108.1",
    "X-IDE-Name": "CLI",
    "X-IDE-Type": "CLI",
    "X-Product": "SaaS",
    "x-codebuddy-request": "1",
    "x-requested-with": "XMLHttpRequest",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "User-Agent": "CLI/2.108.1 CodeBuddy/2.108.1",
    "X-IDE-Name": "CLI",
    "X-IDE-Type": "CLI",
    "X-Product": "SaaS",
    "x-codebuddy-request": "1",
    "x-requested-with": "XMLHttpRequest",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > codebuddy-intl → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "User-Agent": "IDE/2.108.1 CodeBuddy/2.108.1",
    "X-IDE-Name": "IDE",
    "X-IDE-Type": "IDE",
    "X-Product": "SaaS",
    "x-codebuddy-request": "1",
    "x-requested-with": "XMLHttpRequest",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "User-Agent": "IDE/2.108.1 CodeBuddy/2.108.1",
    "X-IDE-Name": "IDE",
    "X-IDE-Type": "IDE",
    "X-Product": "SaaS",
    "x-codebuddy-request": "1",
    "x-requested-with": "XMLHttpRequest",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "User-Agent": "IDE/2.108.1 CodeBuddy/2.108.1",
    "X-IDE-Name": "IDE",
    "X-IDE-Type": "IDE",
    "X-Product": "SaaS",
    "x-codebuddy-request": "1",
    "x-requested-with": "XMLHttpRequest",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > codestral → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > cody → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "X-Requested-With": "Sourcegraph-Editor",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "X-Requested-With": "Sourcegraph-Editor",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "X-Requested-With": "Sourcegraph-Editor",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > cohere → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > copilot-web → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > dahl → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > databricks → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > deepgram → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > deepinfra → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > deepseek → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > deepseek-web → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > devin → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Accept": "application/json",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > dgrid → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > doubao-web → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > duckduckgo-web → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > featherless → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > felo-web → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > fireworks → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > forge → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > freebuff → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > freebuff-web → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > freetheai → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > g4f-gemini → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > g4f-groq → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > g4f-nvidia → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > g4f-ollama → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > g4f-pollinations → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > gemini → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Content-Type": "application/json",
    "x-goog-api-key": "<CRED>",
  },
  "nonStream": {
    "Content-Type": "application/json",
    "x-goog-api-key": "<CRED>",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > gemini-web → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > gitlab → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > glm → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Anthropic-Beta": "claude-code-20250219,interleaved-thinking-2025-05-14",
    "Anthropic-Version": "2023-06-01",
    "Content-Type": "application/json",
    "x-api-key": "<CRED>",
  },
  "nonStream": {
    "Anthropic-Beta": "claude-code-20250219,interleaved-thinking-2025-05-14",
    "Anthropic-Version": "2023-06-01",
    "Content-Type": "application/json",
    "x-api-key": "<CRED>",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Anthropic-Beta": "claude-code-20250219,interleaved-thinking-2025-05-14",
    "Anthropic-Version": "2023-06-01",
    "Content-Type": "application/json",
    "x-api-key": "<CRED>",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > glm-cn → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > groq → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > hackclub → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > hcnsec → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > helyxai → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > huggingchat → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > hyperbolic → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > inferx → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > infron → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > inxorastudio → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > inxorastudio-web → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > kilocode → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > kimchi → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "User-Agent": "kimchi/0.1.76",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "User-Agent": "kimchi/0.1.76",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "User-Agent": "kimchi/0.1.76",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > kimi → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Anthropic-Beta": "claude-code-20250219,interleaved-thinking-2025-05-14",
    "Anthropic-Version": "2023-06-01",
    "Content-Type": "application/json",
    "x-api-key": "<CRED>",
  },
  "nonStream": {
    "Anthropic-Beta": "claude-code-20250219,interleaved-thinking-2025-05-14",
    "Anthropic-Version": "2023-06-01",
    "Content-Type": "application/json",
    "x-api-key": "<CRED>",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Anthropic-Beta": "claude-code-20250219,interleaved-thinking-2025-05-14",
    "Anthropic-Version": "2023-06-01",
    "Content-Type": "application/json",
    "x-api-key": "<CRED>",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > kimi-coding → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Anthropic-Beta": "claude-code-20250219,interleaved-thinking-2025-05-14",
    "Anthropic-Version": "2023-06-01",
    "Content-Type": "application/json",
    "X-Msh-Device-Id": "kimi-<TS>",
    "X-Msh-Device-Model": "<platform>",
    "X-Msh-Platform": "@rsalmn/extremerouter",
    "X-Msh-Version": "2.1.2",
    "x-api-key": "<CRED>",
  },
  "nonStream": {
    "Anthropic-Beta": "claude-code-20250219,interleaved-thinking-2025-05-14",
    "Anthropic-Version": "2023-06-01",
    "Content-Type": "application/json",
    "X-Msh-Device-Id": "kimi-<TS>",
    "X-Msh-Device-Model": "<platform>",
    "X-Msh-Platform": "@rsalmn/extremerouter",
    "X-Msh-Version": "2.1.2",
    "x-api-key": "<CRED>",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Anthropic-Beta": "claude-code-20250219,interleaved-thinking-2025-05-14",
    "Anthropic-Version": "2023-06-01",
    "Content-Type": "application/json",
    "X-Msh-Device-Id": "kimi-<TS>",
    "X-Msh-Device-Model": "<platform>",
    "X-Msh-Platform": "@rsalmn/extremerouter",
    "X-Msh-Version": "2.1.2",
    "x-api-key": "<CRED>",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > kimi-desktop → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > kimi-web → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > llm7 → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > lmarena → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > marathon → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > meta-ai → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > mimocode → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > minimax → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Anthropic-Beta": "claude-code-20250219,interleaved-thinking-2025-05-14",
    "Anthropic-Version": "2023-06-01",
    "Content-Type": "application/json",
    "x-api-key": "<CRED>",
  },
  "nonStream": {
    "Anthropic-Beta": "claude-code-20250219,interleaved-thinking-2025-05-14",
    "Anthropic-Version": "2023-06-01",
    "Content-Type": "application/json",
    "x-api-key": "<CRED>",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Anthropic-Beta": "claude-code-20250219,interleaved-thinking-2025-05-14",
    "Anthropic-Version": "2023-06-01",
    "Content-Type": "application/json",
    "x-api-key": "<CRED>",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > minimax-cn → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Anthropic-Beta": "claude-code-20250219,interleaved-thinking-2025-05-14",
    "Anthropic-Version": "2023-06-01",
    "Content-Type": "application/json",
    "x-api-key": "<CRED>",
  },
  "nonStream": {
    "Anthropic-Beta": "claude-code-20250219,interleaved-thinking-2025-05-14",
    "Anthropic-Version": "2023-06-01",
    "Content-Type": "application/json",
    "x-api-key": "<CRED>",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Anthropic-Beta": "claude-code-20250219,interleaved-thinking-2025-05-14",
    "Anthropic-Version": "2023-06-01",
    "Content-Type": "application/json",
    "x-api-key": "<CRED>",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > mistral → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > moonshot → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > muse-spark-web → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > nanobanana → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > nebius → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > novita → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > nvidia → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > ollama → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > openai → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > openrouter → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "HTTP-Referer": "https://endpoint-proxy.local",
    "X-Title": "Endpoint Proxy",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "HTTP-Referer": "https://endpoint-proxy.local",
    "X-Title": "Endpoint Proxy",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "HTTP-Referer": "https://endpoint-proxy.local",
    "X-Title": "Endpoint Proxy",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > openvecta → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > perplexity → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > perplexity-agent → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > poe-web → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > pollinations → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > puter → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > qwen-cloud → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > qwen-web → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > qwen2api → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > qwencloud → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > siliconflow → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > stepfun → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > t3-web → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > tencent-aistudio-web → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > theoldllm → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > together → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > tokenharbor → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > tokenrouter → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > trae → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "<CRED>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "<CRED>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "<CRED>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > uncloseai → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > unimodel → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > v0-vercel-web → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > venice → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > venice-web → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > veoaifree-web → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > vercel-ai-gateway → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > volcengine-ark → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > windsurf → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > workbuddy → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "User-Agent": "CLI/2.108.1 WorkBuddy/2.108.1",
    "X-IDE-Name": "CLI",
    "X-IDE-Type": "CLI",
    "X-Product": "SaaS",
    "x-codebuddy-request": "1",
    "x-requested-with": "XMLHttpRequest",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "User-Agent": "CLI/2.108.1 WorkBuddy/2.108.1",
    "X-IDE-Name": "CLI",
    "X-IDE-Type": "CLI",
    "X-Product": "SaaS",
    "x-codebuddy-request": "1",
    "x-requested-with": "XMLHttpRequest",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "User-Agent": "CLI/2.108.1 WorkBuddy/2.108.1",
    "X-IDE-Name": "CLI",
    "X-IDE-Type": "CLI",
    "X-Product": "SaaS",
    "x-codebuddy-request": "1",
    "x-requested-with": "XMLHttpRequest",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > wp-studio → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "X-WPCOM-AI-Feature": "studio-assistant-anthropic",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "X-WPCOM-AI-Feature": "studio-assistant-anthropic",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "X-WPCOM-AI-Feature": "studio-assistant-anthropic",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > xai → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > xiaomi-mimo → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > zed → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "x-zed-client-supports-status-messages": "true",
    "x-zed-client-supports-stream-ended-request-completion-status": "true",
    "x-zed-client-supports-x-ai": "true",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "x-zed-client-supports-status-messages": "true",
    "x-zed-client-supports-stream-ended-request-completion-status": "true",
    "x-zed-client-supports-x-ai": "true",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "x-zed-client-supports-status-messages": "true",
    "x-zed-client-supports-stream-ended-request-completion-status": "true",
    "x-zed-client-supports-x-ai": "true",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > zenmux-free → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildUrl (default executor providers) > 1min → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.1min.ai/teams",
  "stream": "https://api.1min.ai/teams",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > 1min-api → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.1min.ai/api/chat-with-ai",
  "stream": "https://api.1min.ai/api/chat-with-ai",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > adapta-web → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://agent.adapta.one/api/chat/stream/v1",
  "stream": "https://agent.adapta.one/api/chat/stream/v1",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > agentrouter → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://agentrouter.org/v1/chat/completions",
  "stream": "https://agentrouter.org/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > agnes-api → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://apihub.agnes-ai.com/v1/chat/completions",
  "stream": "https://apihub.agnes-ai.com/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > agnes-web → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.agnes-ai.com/api/v1/agnes/chat/stream",
  "stream": "https://api.agnes-ai.com/api/v1/agnes/chat/stream",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > aihorde → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://oai.aihorde.net/v1/chat/completions",
  "stream": "https://oai.aihorde.net/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > alibaba → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://dashscope-intl.aliyuncs.com/compatible-mode/v1/chat/completions",
  "stream": "https://dashscope-intl.aliyuncs.com/compatible-mode/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > alibaba-cn → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://dashscope.aliyuncs.com/compatible-mode/v1/chat/completions",
  "stream": "https://dashscope.aliyuncs.com/compatible-mode/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > alicode → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://coding.dashscope.aliyuncs.com/v1/chat/completions",
  "stream": "https://coding.dashscope.aliyuncs.com/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > alicode-intl → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://coding-intl.dashscope.aliyuncs.com/v1/chat/completions",
  "stream": "https://coding-intl.dashscope.aliyuncs.com/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > anthropic → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.anthropic.com/v1/messages",
  "stream": "https://api.anthropic.com/v1/messages",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > api-airforce → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.airforce/v1/chat/completions",
  "stream": "https://api.airforce/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > assemblyai → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.assemblyai.com/v1/audio/transcriptions",
  "stream": "https://api.assemblyai.com/v1/audio/transcriptions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > bazaarlink → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://bazaarlink.ai/api/v1/chat/completions",
  "stream": "https://bazaarlink.ai/api/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > blackbox → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.blackbox.ai/v1/chat/completions",
  "stream": "https://api.blackbox.ai/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > blackbox-web → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://app.blackbox.ai/api/chat",
  "stream": "https://app.blackbox.ai/api/chat",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > bynara → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://router.bynara.id/v1/chat/completions",
  "stream": "https://router.bynara.id/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > byteplus → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://ark.ap-southeast.bytepluses.com/api/coding/v3/chat/completions",
  "stream": "https://ark.ap-southeast.bytepluses.com/api/coding/v3/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > cerebras → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.cerebras.ai/v1/chat/completions",
  "stream": "https://api.cerebras.ai/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > chatglm-cn → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://chatglm.cn/chatglm",
  "stream": "https://chatglm.cn/chatglm",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > chatgpt-web → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://chatgpt.com/backend-api/f/conversation",
  "stream": "https://chatgpt.com/backend-api/f/conversation",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > chutes → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://llm.chutes.ai/v1/chat/completions",
  "stream": "https://llm.chutes.ai/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > claude → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.anthropic.com/v1/messages?beta=true",
  "stream": "https://api.anthropic.com/v1/messages?beta=true",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > claude-web → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://claude.ai/api",
  "stream": "https://claude.ai/api",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > cline → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.cline.bot/api/v1/chat/completions",
  "stream": "https://api.cline.bot/api/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > clinepass → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.cline.bot/api/v1/chat/completions",
  "stream": "https://api.cline.bot/api/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > cloudflare-ai → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.cloudflare.com/client/v4/accounts/ACC123/ai/v1/chat/completions",
  "stream": "https://api.cloudflare.com/client/v4/accounts/ACC123/ai/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > codebuddy-cn → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://copilot.tencent.com/v2/chat/completions",
  "stream": "https://copilot.tencent.com/v2/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > codebuddy-intl → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://www.codebuddy.ai/v2/chat/completions",
  "stream": "https://www.codebuddy.ai/v2/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > codestral → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://codestral.mistral.ai/v1/chat/completions",
  "stream": "https://codestral.mistral.ai/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > cody → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://sourcegraph.com/.api/llm/completions/Stream",
  "stream": "https://sourcegraph.com/.api/llm/completions/Stream",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > cohere → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.cohere.ai/v1/chat/completions",
  "stream": "https://api.cohere.ai/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > copilot-web → url (stream + non-stream) 1`] = `
{
  "nonStream": "wss://copilot.microsoft.com/c/api/chat?api-version=2",
  "stream": "wss://copilot.microsoft.com/c/api/chat?api-version=2",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > dahl → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://inference.dahl.global/v1/chat/completions",
  "stream": "https://inference.dahl.global/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > databricks → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://adb-0000000000000000.0.azuredatabricks.net/serving-endpoints",
  "stream": "https://adb-0000000000000000.0.azuredatabricks.net/serving-endpoints",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > deepgram → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.deepgram.com/v1/listen",
  "stream": "https://api.deepgram.com/v1/listen",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > deepinfra → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.deepinfra.com/v1/openai/chat/completions",
  "stream": "https://api.deepinfra.com/v1/openai/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > deepseek → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.deepseek.com/chat/completions",
  "stream": "https://api.deepseek.com/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > deepseek-web → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://chat.deepseek.com",
  "stream": "https://chat.deepseek.com",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > devin → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.devin.ai",
  "stream": "https://api.devin.ai",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > dgrid → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.dgrid.ai/v1/chat/completions",
  "stream": "https://api.dgrid.ai/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > doubao-web → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://www.doubao.com/api/chat",
  "stream": "https://www.doubao.com/api/chat",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > duckduckgo-web → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://duckduckgo.com",
  "stream": "https://duckduckgo.com",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > featherless → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.featherless.ai/v1/chat/completions",
  "stream": "https://api.featherless.ai/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > felo-web → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://felo.ai",
  "stream": "https://felo.ai",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > fireworks → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.fireworks.ai/inference/v1/chat/completions",
  "stream": "https://api.fireworks.ai/inference/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > forge → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://forge-gateway-api.fly.dev/v1/chat/completions",
  "stream": "https://forge-gateway-api.fly.dev/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > freebuff → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://codebuff.com",
  "stream": "https://codebuff.com",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > freebuff-web → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://freebuff.com/api/chat/stream",
  "stream": "https://freebuff.com/api/chat/stream",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > freetheai → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.freetheai.xyz/v1/chat/completions",
  "stream": "https://api.freetheai.xyz/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > g4f-gemini → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://g4f.space/api/gemini/v1/chat/completions",
  "stream": "https://g4f.space/api/gemini/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > g4f-groq → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://g4f.space/api/groq/v1/chat/completions",
  "stream": "https://g4f.space/api/groq/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > g4f-nvidia → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://g4f.space/api/nvidia/v1/chat/completions",
  "stream": "https://g4f.space/api/nvidia/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > g4f-ollama → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://g4f.space/api/ollama/v1/chat/completions",
  "stream": "https://g4f.space/api/ollama/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > g4f-pollinations → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://g4f.space/api/pollinations/v1/chat/completions",
  "stream": "https://g4f.space/api/pollinations/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > gemini → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://generativelanguage.googleapis.com/v1beta/models/test-model:generateContent",
  "stream": "https://generativelanguage.googleapis.com/v1beta/models/test-model:streamGenerateContent?alt=sse",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > gemini-web → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://gemini.google.com/app",
  "stream": "https://gemini.google.com/app",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > gitlab → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://gitlab.com/api/v4/chat/completions",
  "stream": "https://gitlab.com/api/v4/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > glm → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.z.ai/api/anthropic/v1/messages?beta=true",
  "stream": "https://api.z.ai/api/anthropic/v1/messages?beta=true",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > glm-cn → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://open.bigmodel.cn/api/coding/paas/v4/chat/completions",
  "stream": "https://open.bigmodel.cn/api/coding/paas/v4/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > groq → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.groq.com/openai/v1/chat/completions",
  "stream": "https://api.groq.com/openai/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > hackclub → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://ai.hackclub.com/proxy/v1/chat/completions",
  "stream": "https://ai.hackclub.com/proxy/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > hcnsec → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.hcnsec.cn/v1/chat/completions",
  "stream": "https://api.hcnsec.cn/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > helyxai → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://helyxai.space/v1/chat/completions",
  "stream": "https://helyxai.space/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > huggingchat → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://huggingface.co",
  "stream": "https://huggingface.co",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > hyperbolic → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.hyperbolic.xyz/v1/chat/completions",
  "stream": "https://api.hyperbolic.xyz/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > inferx → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://model.inferx.net/endpoints/v1/chat/completions",
  "stream": "https://model.inferx.net/endpoints/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > infron → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://llm.onerouter.pro/v1/chat/completions",
  "stream": "https://llm.onerouter.pro/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > inxorastudio → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://labs.inxorastudio.com/v1/chat/completions",
  "stream": "https://labs.inxorastudio.com/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > inxorastudio-web → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://labs.inxorastudio.com/api/conversations",
  "stream": "https://labs.inxorastudio.com/api/conversations",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > kilocode → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.kilo.ai/api/openrouter/chat/completions",
  "stream": "https://api.kilo.ai/api/openrouter/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > kimchi → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://llm.kimchi.dev/openai/v1/chat/completions",
  "stream": "https://llm.kimchi.dev/openai/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > kimi → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.kimi.com/coding/v1/messages?beta=true",
  "stream": "https://api.kimi.com/coding/v1/messages?beta=true",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > kimi-coding → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.kimi.com/coding/v1/messages?beta=true",
  "stream": "https://api.kimi.com/coding/v1/messages?beta=true",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > kimi-desktop → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://www.kimi.com",
  "stream": "https://www.kimi.com",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > kimi-web → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://www.kimi.com",
  "stream": "https://www.kimi.com",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > llm7 → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.llm7.io/v1/chat/completions",
  "stream": "https://api.llm7.io/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > lmarena → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://arena.ai/nextjs-api/stream",
  "stream": "https://arena.ai/nextjs-api/stream",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > marathon → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://delayed-inference.prod.gokite.ai/v1/delayed/chat/completions",
  "stream": "https://delayed-inference.prod.gokite.ai/v1/delayed/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > meta-ai → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.meta.ai/v1/chat/completions",
  "stream": "https://api.meta.ai/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > mimocode → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.xiaomimimo.com",
  "stream": "https://api.xiaomimimo.com",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > minimax → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.minimax.io/anthropic/v1/messages?beta=true",
  "stream": "https://api.minimax.io/anthropic/v1/messages?beta=true",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > minimax-cn → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.minimaxi.com/anthropic/v1/messages?beta=true",
  "stream": "https://api.minimaxi.com/anthropic/v1/messages?beta=true",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > mistral → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.mistral.ai/v1/chat/completions",
  "stream": "https://api.mistral.ai/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > moonshot → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.moonshot.ai/v1/chat/completions",
  "stream": "https://api.moonshot.ai/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > muse-spark-web → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://www.meta.ai/api/graphql",
  "stream": "https://www.meta.ai/api/graphql",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > nanobanana → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.nanobananaapi.ai/v1/chat/completions",
  "stream": "https://api.nanobananaapi.ai/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > nebius → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.studio.nebius.ai/v1/chat/completions",
  "stream": "https://api.studio.nebius.ai/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > novita → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.novita.ai/v3/openai/chat/completions",
  "stream": "https://api.novita.ai/v3/openai/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > nvidia → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://integrate.api.nvidia.com/v1/chat/completions",
  "stream": "https://integrate.api.nvidia.com/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > ollama → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://ollama.com/api/chat",
  "stream": "https://ollama.com/api/chat",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > openai → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.openai.com/v1/chat/completions",
  "stream": "https://api.openai.com/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > openrouter → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://openrouter.ai/api/v1/chat/completions",
  "stream": "https://openrouter.ai/api/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > openvecta → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.openvecta.com/v1/chat/completions",
  "stream": "https://api.openvecta.com/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > perplexity → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.perplexity.ai/chat/completions",
  "stream": "https://api.perplexity.ai/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > perplexity-agent → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.perplexity.ai/v1/agent",
  "stream": "https://api.perplexity.ai/v1/agent",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > poe-web → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://www.poe.com/api/gql_POST",
  "stream": "https://www.poe.com/api/gql_POST",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > pollinations → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://gen.pollinations.ai/v1/chat/completions",
  "stream": "https://gen.pollinations.ai/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > puter → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.puter.com/puterai/openai/v1/chat/completions",
  "stream": "https://api.puter.com/puterai/openai/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > qwen-cloud → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://dashscope-intl.aliyuncs.com/compatible-mode/v1/chat/completions",
  "stream": "https://dashscope-intl.aliyuncs.com/compatible-mode/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > qwen-web → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://chat.qwen.ai",
  "stream": "https://chat.qwen.ai",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > qwen2api → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://effulgent-pika-7b150e.netlify.app/v1/chat/completions",
  "stream": "https://effulgent-pika-7b150e.netlify.app/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > qwencloud → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://cs-stream.qwencloud.com/sse/console4Json",
  "stream": "https://cs-stream.qwencloud.com/sse/console4Json",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > siliconflow → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.siliconflow.com/v1/chat/completions",
  "stream": "https://api.siliconflow.com/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > stepfun → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.stepfun.ai/v1/chat/completions",
  "stream": "https://api.stepfun.ai/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > t3-web → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://t3.chat",
  "stream": "https://t3.chat",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > tencent-aistudio-web → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://aistudio.tencent.ai",
  "stream": "https://aistudio.tencent.ai",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > theoldllm → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://theoldllm.vercel.app/api/chatgpt",
  "stream": "https://theoldllm.vercel.app/api/chatgpt",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > together → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.together.xyz/v1/chat/completions",
  "stream": "https://api.together.xyz/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > tokenharbor → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://tokenharbor.ai/v1/chat/completions",
  "stream": "https://tokenharbor.ai/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > tokenrouter → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.tokenrouter.com/v1/chat/completions",
  "stream": "https://api.tokenrouter.com/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > trae → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://core-normal.trae.ai/api/remote/v1",
  "stream": "https://core-normal.trae.ai/api/remote/v1",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > uncloseai → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://hermes.ai.unturf.com/v1/chat/completions",
  "stream": "https://hermes.ai.unturf.com/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > unimodel → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://sg.unimodel.ai/v1/chat/completions",
  "stream": "https://sg.unimodel.ai/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > v0-vercel-web → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://v0.app/chat/api/chat",
  "stream": "https://v0.app/chat/api/chat",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > venice → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.venice.ai/api/v1/chat/completions",
  "stream": "https://api.venice.ai/api/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > venice-web → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://venice.ai",
  "stream": "https://venice.ai",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > veoaifree-web → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://veoaifree.com",
  "stream": "https://veoaifree.com",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > vercel-ai-gateway → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://ai-gateway.vercel.sh/v1/chat/completions",
  "stream": "https://ai-gateway.vercel.sh/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > volcengine-ark → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://ark.cn-beijing.volces.com/api/coding/v3/chat/completions",
  "stream": "https://ark.cn-beijing.volces.com/api/coding/v3/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > windsurf → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://server.self-serve.windsurf.com",
  "stream": "https://server.self-serve.windsurf.com",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > workbuddy → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://www.workbuddy.ai/v2/chat/completions",
  "stream": "https://www.workbuddy.ai/v2/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > wp-studio → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://public-api.wordpress.com/wpcom/v2/ai-api-proxy/v1/messages",
  "stream": "https://public-api.wordpress.com/wpcom/v2/ai-api-proxy/v1/messages",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > xai → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.x.ai/v1/chat/completions",
  "stream": "https://api.x.ai/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > xiaomi-mimo → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.xiaomimimo.com/v1/chat/completions",
  "stream": "https://api.xiaomimimo.com/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > zed → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://cloud.zed.dev",
  "stream": "https://cloud.zed.dev",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > zenmux-free → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://zenmux.ai/api/anthropic/v1/messages",
  "stream": "https://zenmux.ai/api/anthropic/v1/messages",
}
`;
